tmp/1.cpp.err
codes/1.cpp: In function ‘int main()’:
codes/1.cpp:8:2: error: expected ‘;’ before ‘return’
  return 0;
  ^
